we already pass the ScRefCellValue as parameter, tdf#93405

Change-Id: I27f7e8ffe93545fe872a0c5b64f26dc90cb70e6f